higan/gba/ppu/.err
io.cpp:1:6: error: ‘PPU’ has not been declared
 auto PPU::readIO(uint32 addr) -> uint8 {
      ^~~
io.cpp:1:18: error: ‘uint32’ was not declared in this scope
 auto PPU::readIO(uint32 addr) -> uint8 {
                  ^~~~~~
io.cpp:1:31: error: expected ‘,’ or ‘;’ before ‘->’ token
 auto PPU::readIO(uint32 addr) -> uint8 {
                               ^~
cc1plus: fatal error: ./: No such file or directory
compilation terminated.
